<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Measure My Image</string>
    <string name="UserName">UserName:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="CreateUser">Create New User</string>
    <string name="action_settings">Settings</string>
    <string name="ImportImage">Import Image</string>
    <string name="OpenCamera">Open Camera</string>
    <string name="ObjectName">Object Name</string>
    <string name="Height">Height</string>
    <string name="Width">Width</string>
    <string name="UnitOfMeasure">Unit Of Measure</string>
    <string name="CreateObject">Create Object</string>
    <string name="Distance">Distance :</string>
    <string name="DeleteImages">Delete Images</string>
    <string name="DeleteObject">Delete Object</string>
    <string name="ReferenceObject">Reference Object :</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_user_images">UserImages</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="title_activity_reference_object">ReferenceObject</string>
    <string name="title_activity_user_reference_objects">UserReferenceObjects</string>
    <string name="button_distance">Start Distance Camera</string>
    <string name="title_activity_sensor">SENSOR ORIENTAION</string>
    <string name="title_activity_userdistance">Distance Calculation</string>
    <string-array name="Units_of_Measure">
        <item>Select</item>
        <item>in.</item>
        <item>ft.</item>
        <item>cm.</item>
    </string-array>


</resources>
