<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowTitleSize="0dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ObjectName"
        android:id="@+id/ObjectNameText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/ObjectNameEditText"
        android:layout_below="@+id/ObjectNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/SubmitButton"
        android:layout_alignEnd="@+id/SubmitButton"
        android:background="#ffd2faff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        android:id="@+id/HeightTextView"
        android:layout_below="@+id/ObjectNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/HeightEditText"
        android:layout_below="@+id/HeightTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ObjectNameEditText"
        android:layout_alignEnd="@+id/ObjectNameEditText"
        android:background="#ffd2faff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Width"
        android:id="@+id/WidthTextView"
        android:layout_below="@+id/HeightEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/WidthEditText"
        android:layout_below="@+id/WidthTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/HeightEditText"
        android:layout_alignEnd="@+id/HeightEditText"
        android:background="#ffd2faff"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UnitOfMeasure"
        android:id="@+id/UnitOfMeasureText"
        android:layout_below="@+id/WidthEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UnitOfMeasureSpinner"
        android:layout_below="@+id/UnitOfMeasureText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/SubmitButton"
        android:clickable="true"
        android:onClick="onSubmitClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
