<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:windowTitleSize="0dp"
    tools:context=".UserLogin"
    android:id="@+id/UserLogin">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:typeface="normal"
        android:id="@+id/LoginTitle"
        android:layout_below="@+id/LoginImage"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/UserNameTextBox"
        android:layout_below="@+id/UserLoginLabel"
        android:layout_alignLeft="@+id/UserLoginLabel"
        android:layout_alignStart="@+id/UserLoginLabel"
        android:layout_alignRight="@+id/LoginTitle"
        android:layout_alignEnd="@+id/LoginTitle"
        android:background="#ffd2faff"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordTextBox"
        android:layout_below="@+id/PasswordLabel"
        android:layout_alignLeft="@+id/PasswordLabel"
        android:layout_alignStart="@+id/PasswordLabel"
        android:layout_alignRight="@+id/UserNameTextBox"
        android:layout_alignEnd="@+id/UserNameTextBox"
        android:background="#ffd2faff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserName"
        android:id="@+id/UserLoginLabel"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/LoginTitle"
        android:layout_alignLeft="@+id/LoginTitle"
        android:layout_alignStart="@+id/LoginTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:id="@+id/PasswordLabel"
        android:layout_below="@+id/UserNameTextBox"
        android:layout_alignLeft="@+id/UserNameTextBox"
        android:layout_alignStart="@+id/UserNameTextBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/LoginButton"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="onLoginClick"
        android:layout_below="@+id/PasswordTextBox"
        android:layout_alignLeft="@+id/PasswordTextBox"
        android:layout_alignStart="@+id/PasswordTextBox"
        android:layout_alignRight="@+id/PasswordTextBox"
        android:layout_alignEnd="@+id/PasswordTextBox" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginImage"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:clickable="false"
        android:background="@drawable/measure"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:focusable="false"
        android:layout_toEndOf="@+id/UserLoginLabel"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/UserLoginLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateUser"
        android:id="@+id/CreateUserButton"
        android:clickable="true"
        android:onClick="onCreateClick"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/LoginButton"
        android:layout_alignRight="@+id/LoginButton"
        android:layout_alignEnd="@+id/LoginButton"
        android:layout_alignLeft="@+id/LoginButton"
        android:layout_alignStart="@+id/LoginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MessageText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff1800" />

</RelativeLayout>
